--- a/HelloHost/HelloHost/HelloHost.csproj
+++ b/HelloHost/HelloHost/HelloHost.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7ADE5A04-BEC5-4EE2-9E62-294015909477}</ProjectGuid>
+    <ProjectGuid>{18CF0F57-50AF-42DC-8B62-9D458FDDF402}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DelegatesWheelOfFortune</RootNamespace>
-    <AssemblyName>DelegatesWheelOfFortune</AssemblyName>
+    <RootNamespace>HelloHost</RootNamespace>
+    <AssemblyName>HelloHost</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
